fix(footer): fix footer position

--- a/css/style.css
+++ b/css/style.css
@@ -261,6 +261,9 @@ section {
     padding: 4rem 0;
     text-align: center;
     border-top: 1px solid var(--color-border);
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
 
 .footer-bottom {
