--- a/css/style.css
+++ b/css/style.css
@@ -183,6 +183,7 @@ section {
     width: 100%;
     height: 100%;
     background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.8));
+    z-index: 0;
 }
 
 .hero-title {
