--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,7 @@ body {
     background-attachment: fixed;
     overflow-x: hidden;
     margin: 0;
+    min-height: 100vh;
 }
 
 /* --- Typography --- */
